// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bookmarks — list row rendering > given a jj command error > renders empty list when jj bookmark list fails 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Bookmarks (0/0)[0m                          [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Source Preview[0m                                                            [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[38;2;76;62;118m No items found[0m                           [39m[38;2;250;208;0m│[39m[0m[38;2;76;62;118m  No preview available[39m[0m                                                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav[0m                                                                                                                [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`bookmarks — list row rendering > given a single bookmark > renders the bookmark with name and description 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Bookmarks (1/1)[0m                          [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m main[0m                                                                      [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m [7m[38;2;250;208;0m 󰃀 main [39m[27m[38;2;76;62;118m · [39m[38;2;76;62;118mfeat(ide): add spli…[39m[38;2;76;62;118m · [39m[38;2;76;62;118mknoopx[39m[22m[39m [49m[38;2;250;208;0m│[39m[0m  [1magent/extensions/ide/components/files.ts[0m[0m                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [90m@@ -1,5 +1,8 @@[0m[0m                                                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { ExtensionAPI } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@earendil-works/pi-coding-agent"[39m[38;2;225;228;232m;[39m[0m     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [48;2;8;31;13m[38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { Theme } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@earendil-works/pi-coding-agent"[39m[38;2;225;228;232m;[39m[0m[0m            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { createListPicker } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/list-picker/picker"[39m[38;2;225;228;232m;[39m[0m         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [48;2;8;31;13m[38;2;249;117;131mimport[39m[38;2;225;228;232m { createFilePreviewLoader } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/preview-utils"[39m[38;2;225;228;232m;[39m[0m[0m       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { getFileIcon } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/file-icons"[39m[38;2;225;228;232m;[39m[0m                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  ctrl+n new  ctrl+d delete  ctrl+g fetch  ctrl+p push  ctrl+i insert[0m                                           [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`bookmarks — list row rendering > given bookmarks with long descriptions > truncates descriptions to fit terminal width 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Bookmarks (1/1)[0m                          [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m feature/pi-tui-integration[0m                                                [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m [7m[38;2;250;208;0m 󰃀 feature/pi-tui-integration [39m[27m[38;2;76;62;118m · [39m[38;2;76;62;118mfeat(tui[39m[22m[39m[49m[38;2;250;208;0m│[39m[0m  [1magent/extensions/ide/components/files.ts[0m[0m                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [90m@@ -1,5 +1,8 @@[0m[0m                                                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { ExtensionAPI } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@earendil-works/pi-coding-agent"[39m[38;2;225;228;232m;[39m[0m     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [48;2;8;31;13m[38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { Theme } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@earendil-works/pi-coding-agent"[39m[38;2;225;228;232m;[39m[0m[0m            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { createListPicker } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/list-picker/picker"[39m[38;2;225;228;232m;[39m[0m         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [48;2;8;31;13m[38;2;249;117;131mimport[39m[38;2;225;228;232m { createFilePreviewLoader } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/preview-utils"[39m[38;2;225;228;232m;[39m[0m[0m       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { getFileIcon } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/file-icons"[39m[38;2;225;228;232m;[39m[0m                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  ctrl+n new  ctrl+d delete  ctrl+g fetch  ctrl+p push  ctrl+i insert[0m                                           [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`bookmarks — list row rendering > given bookmarks with no descriptions > renders (no description) placeholder 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Bookmarks (1/1)[0m                          [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m wip/experiment[0m                                                            [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m [7m[38;2;250;208;0m 󰃀 wip/experiment [39m[27m[38;2;76;62;118m · [39m[38;2;76;62;118m(no descr…[39m[38;2;76;62;118m · [39m[38;2;76;62;118mknoopx[39m[22m[39m [49m[38;2;250;208;0m│[39m[0m  [1magent/extensions/ide/components/files.ts[0m[0m                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [90m@@ -1,5 +1,8 @@[0m[0m                                                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { ExtensionAPI } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@earendil-works/pi-coding-agent"[39m[38;2;225;228;232m;[39m[0m     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [48;2;8;31;13m[38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { Theme } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@earendil-works/pi-coding-agent"[39m[38;2;225;228;232m;[39m[0m[0m            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { createListPicker } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/list-picker/picker"[39m[38;2;225;228;232m;[39m[0m         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [48;2;8;31;13m[38;2;249;117;131mimport[39m[38;2;225;228;232m { createFilePreviewLoader } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/preview-utils"[39m[38;2;225;228;232m;[39m[0m[0m       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { getFileIcon } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/file-icons"[39m[38;2;225;228;232m;[39m[0m                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  ctrl+n new  ctrl+d delete  ctrl+g fetch  ctrl+p push  ctrl+i insert[0m                                           [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`bookmarks — list row rendering > given empty results > renders the no items message 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Bookmarks (0/0)[0m                          [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Source Preview[0m                                                            [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[38;2;76;62;118m No items found[0m                           [39m[38;2;250;208;0m│[39m[0m[38;2;76;62;118m  No preview available[39m[0m                                                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav[0m                                                                                                                [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`bookmarks — list row rendering > given multiple bookmarks on different changes > renders all bookmarks with consistent padding 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Bookmarks (3/3)[0m                          [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m main[0m                                                                      [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m [7m[38;2;250;208;0m 󰃀 main [39m[27m[38;2;76;62;118m · [39m[38;2;76;62;118mfeat(ide): add spli…[39m[38;2;76;62;118m · [39m[38;2;76;62;118mknoopx[39m[22m[39m [49m[38;2;250;208;0m│[39m[0m  [1magent/extensions/ide/components/files.ts[0m[0m                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [7m[38;2;250;208;0m 󰃀 develop [39m[27m[38;2;76;62;118m · [39m[38;2;76;62;118mrefactor(ide): s…[39m[38;2;76;62;118m · [39m[38;2;76;62;118mknoopx[39m[0m [38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [7m[38;2;250;208;0m 󰃀 release-v0.4.0 [39m[27m[38;2;76;62;118m · [39m[38;2;76;62;118mchore: bu…[39m[38;2;76;62;118m · [39m[38;2;76;62;118mknoopx[39m[0m [38;2;250;208;0m│[39m[0m  [90m@@ -1,5 +1,8 @@[0m[0m                                                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { ExtensionAPI } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@earendil-works/pi-coding-agent"[39m[38;2;225;228;232m;[39m[0m     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [48;2;8;31;13m[38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { Theme } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@earendil-works/pi-coding-agent"[39m[38;2;225;228;232m;[39m[0m[0m            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { createListPicker } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/list-picker/picker"[39m[38;2;225;228;232m;[39m[0m         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [48;2;8;31;13m[38;2;249;117;131mimport[39m[38;2;225;228;232m { createFilePreviewLoader } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/preview-utils"[39m[38;2;225;228;232m;[39m[0m[0m       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { getFileIcon } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/file-icons"[39m[38;2;225;228;232m;[39m[0m                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  ctrl+n new  ctrl+d delete  ctrl+g fetch  ctrl+p push  ctrl+i insert[0m                                           [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`bookmarks — list row rendering > given multiple bookmarks on the same change > groups bookmarks by change ID 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Bookmarks (2/2)[0m                          [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m main[0m                                                                      [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m [7m[38;2;250;208;0m 󰃀 main [39m[27m [7m[38;2;250;208;0m 󰃀 feature/split-panel [39m[27m[38;2;76;62;118m · [39m[38;2;76;62;118mfeat(i[39m[22m[39m[49m[38;2;250;208;0m│[39m[0m  [1magent/extensions/ide/components/files.ts[0m[0m                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m [7m[38;2;250;208;0m 󰃀 release-v0.4.0 [39m[27m[38;2;76;62;118m · [39m[38;2;76;62;118mchore: bu…[39m[38;2;76;62;118m · [39m[38;2;76;62;118mknoopx[39m[0m [38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [90m@@ -1,5 +1,8 @@[0m[0m                                                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { ExtensionAPI } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@earendil-works/pi-coding-agent"[39m[38;2;225;228;232m;[39m[0m     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [48;2;8;31;13m[38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { Theme } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@earendil-works/pi-coding-agent"[39m[38;2;225;228;232m;[39m[0m[0m            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { createListPicker } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/list-picker/picker"[39m[38;2;225;228;232m;[39m[0m         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [48;2;8;31;13m[38;2;249;117;131mimport[39m[38;2;225;228;232m { createFilePreviewLoader } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/preview-utils"[39m[38;2;225;228;232m;[39m[0m[0m       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { getFileIcon } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/file-icons"[39m[38;2;225;228;232m;[39m[0m                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  ctrl+n new  ctrl+d delete  ctrl+g fetch  ctrl+p push  ctrl+i insert[0m                                           [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;
